Lazy Composer Commiter

--- a/view/error/404.phtml
+++ b/view/error/404.phtml
@@ -1,28 +1,28 @@
 <?php
 use Zend\Mvc\Application;
 ?>
-    <h1>A 404 error occurred</h1>
+    <h1><?= $this->translate('A 404 error occurred'); ?></h1>
     <h2><?= $this->message ?></h2>
 
 <?php if (! empty($this->reason)) :
     switch ($this->reason) {
         case Application::ERROR_CONTROLLER_CANNOT_DISPATCH:
-            $reasonMessage = 'The requested controller was unable to dispatch the request.';
+            $reasonMessage = $this->translate('The requested controller was unable to dispatch the request.');
             break;
         case Application::ERROR_MIDDLEWARE_CANNOT_DISPATCH:
-            $reasonMessage = 'The requested middleware was unable to dispatch the request.';
+            $reasonMessage = $this->translate('The requested middleware was unable to dispatch the request.');
             break;
         case Application::ERROR_CONTROLLER_NOT_FOUND:
-            $reasonMessage = 'The requested controller could not be mapped to an existing controller class.';
+            $reasonMessage = $this->translate('The requested controller could not be mapped to an existing controller class.');
             break;
         case Application::ERROR_CONTROLLER_INVALID:
-            $reasonMessage = 'The requested controller was not dispatchable.';
+            $reasonMessage = $this->translate('The requested controller was not dispatchable.');
             break;
         case Application::ERROR_ROUTER_NO_MATCH:
-            $reasonMessage = 'The requested URL could not be matched by routing.';
+            $reasonMessage = $this->translate('The requested URL could not be matched by routing.');
             break;
         default:
-            $reasonMessage = 'We cannot determine at this time why a 404 was generated.';
+            $reasonMessage = $this->translate('We cannot determine at this time why a 404 was generated.');
             break;
     }
     ?>
